@@ -4,6 +4,7 @@ version 0.70.02
 	Reading auto iso range (K-x only)
 	Setting auto iso range (commandline only)
 	Added new jpeg images modes
+	Reading drive mode (K-x only)
 
 version 0.70.01 ( 2011-01-19 )
 	File format support for commandline interface (--file_format)
